# magic_macros_example

./: .gitignore  Cargo.toml
project_proc_macros/: Cargo.toml
project_proc_macros/src/: lib.rs
src/: main.rs
