[package]
name = "project_proc_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macro_magic = { version = "0.4.2", features = ["proc_support"] }
proc-macro2 = {version = "1.0.66"}
quote = {}
syn = { features = ["full", "visit", "parsing"] }

[lib]
proc-macro = true
